--- a/app/index.html
+++ b/app/index.html
@@ -1,12 +1,39 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="blocItOff">
 <head lang="en">
     <meta charset="UTF-8">
     <title>Bloc Base Project</title>
     <link rel="stylesheet" href="/styles/main.css">
 </head>
 <body>
+    <ui-view></ui-view>
     <h4>Hello, World???</h4>
+    <!-- Angular -->
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
+
+    <!-- AngularUI Router -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.4.2/angular-ui-router.min.js"></script>
+
+    <!-- FireBase -->
+    <script src="https://www.gstatic.com/firebasejs/3.9.0/firebase.js"></script>
+
+    <!-- AngularFire -->
+    <script src="https://cdn.firebase.com/libs/angularfire/2.3.0/angularfire.min.js"></script>
+
+    <script>
+      // Initialize Firebase
+      var config = {
+        apiKey: "AIzaSyAzAYAlWn0-w3jkpMUrbVraolgTy_Kt2gs",
+        authDomain: "blocitoff-677a5.firebaseapp.com",
+        databaseURL: "https://blocitoff-677a5.firebaseio.com",
+        projectId: "blocitoff-677a5",
+        storageBucket: "blocitoff-677a5.appspot.com",
+        messagingSenderId: "409234146538"
+      };
+      firebase.initializeApp(config);
+    </script>
+
+    <!-- Application Files -->
     <script src="/scripts/app.js"></script>
 </body>
 </html>
