--- a/app/index.html
+++ b/app/index.html
@@ -2,12 +2,13 @@
 <html ng-app="blocItOff">
 <head lang="en">
     <meta charset="UTF-8">
-    <title>Bloc Base Project</title>
+    <title>Blocitoff</title>
     <link rel="stylesheet" href="/styles/main.css">
 </head>
+
 <body>
     <ui-view></ui-view>
-    <h4>Hello, World???</h4>
+
     <!-- Angular -->
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
 
@@ -35,5 +36,7 @@
 
     <!-- Application Files -->
     <script src="/scripts/app.js"></script>
+    <script src="/scripts/controllers/HomeCtrl.js"></script>
+    <script src="/scripts/services/Task.js"></script>
 </body>
 </html>
