--- a/app/index.html
+++ b/app/index.html
@@ -38,5 +38,6 @@
     <script src="/scripts/app.js"></script>
     <script src="/scripts/controllers/HomeCtrl.js"></script>
     <script src="/scripts/services/Task.js"></script>
+    <script src="/scripts/services/List.js"></script>
 </body>
 </html>
