--- a/app/index.html
+++ b/app/index.html
@@ -7,6 +7,7 @@
 </head>
 
 <body>
+
     <ui-view></ui-view>
 
     <!-- Angular -->
@@ -37,6 +38,7 @@
     <!-- Application Files -->
     <script src="/scripts/app.js"></script>
     <script src="/scripts/controllers/HomeCtrl.js"></script>
+    <script src="/scripts/controllers/PastTasksCtrl.js"></script>
     <script src="/scripts/services/Task.js"></script>
 </body>
 </html>
